--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,3 +25,11 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Install Grype
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sh -s -- -b /usr/local/bin
+
+    - name: Run Grype vulnerability scan
+      run: |
+        grype . --fail-on medium --output table
