ci: remove fail-on option from Grype vulnerability scan
Signed-off-by: Tsung-Han Ho (Miles Ho) <mystes3016@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,4 +32,4 @@ jobs:
 
     - name: Run Grype vulnerability scan
       run: |
-        grype . --fail-on medium --output table
+        grype . --output table
